fix bug add QQ OPENID

--- a/template/iCMS/mobile/user/register.htm
+++ b/template/iCMS/mobile/user/register.htm
@@ -59,7 +59,7 @@
             <input type="password" placeholder="请在一次输入您的密码" data-container=".rstpassword_tip" name="rstpassword" id="iCMS-reg-rstpassword" class="form-control">
             <span class="help-block rstpassword_tip">这里要重复输入一下你的密码</span>
           </div>
-          <!--{if $iCMS.config.user.regseccode }-->
+          <!--{if $iCMS.CONFIG.user.regseccode }-->
           <div class="form-group">
             <!-- <label for="iCMS-reg-seccode">验证码</label> -->
             <input type="text" placeholder="验证码" maxlength="4" data-container=".seccode_tip" name="seccode" id="iCMS-reg-seccode" class="iCMS_seccode form-control">
