--- a/template/iCMS/public.common.htm
+++ b/template/iCMS/public.common.htm
@@ -13,7 +13,7 @@
             <dt>
               <input type="password" name="pass" data-container=".login_fail" class="iCMS_login_pass">
             </dt>
-            <!--{if $iCMS.config.user.loginseccode}-->
+            <!--{if $iCMS.CONFIG.user.loginseccode}-->
             <dd>验证码：</dd>
             <dt>
               <input type="text" maxlength="4" name="seccode" data-container=".login_fail" class="iCMS_login_seccode iCMS_seccode">
