--- a/template/iCMS/user/login.htm
+++ b/template/iCMS/user/login.htm
@@ -34,7 +34,7 @@
               </div>
               <div class="err_pass"><span><i class="fa fa-minus-circle"></i> 请输入密码</span></div>
               <div class="clear"></div>
-              <!--{if $iCMS.config.user.loginseccode }-->
+              <!--{if $iCMS.CONFIG.user.loginseccode }-->
               <div class="lg_check"><span>验证码：</span>
                 <input type="text" maxlength="4" name="seccode" class="iCMS_login_seccode iCMS_seccode">
                 <img src="<!--{iCMS:router url='/api/seccode'}-->" alt="验证码" class="iCMS_seccode_img r3"/>
