--- a/app/admincp/ui/admincp-6.0.0.css
+++ b/app/admincp/ui/admincp-6.0.0.css
@@ -375,7 +375,7 @@ div.dataTables_wrapper .ui-widget-header { border-right: medium none; border-top
 .table-striped tbody > tr:nth-child(2n+1) > td, .table-striped tbody > tr:nth-child(2n+1) > th { background-color: #FCFCFC; }
 .table-hover tbody > tr:hover > td { background-color: #f5f5f5; }
 /* Misc */
-.nopadding { padding: 0 !important; }
+.nopadding { padding: 1px !important; }
 .nopadding .table { margin-bottom: 0; }
 .nopadding .table-bordered { border: 0; }
 .nopadding .table-bordered tr > td:first-child { border-left: 0; }
