--- a/template/iCMS/user/register.htm
+++ b/template/iCMS/user/register.htm
@@ -13,7 +13,6 @@
     $(function(){
       <!--{if $user}-->
       iCMS.user.OPENID = <!--{$user|json_encode}-->;
-      console.log(iCMS.user.OPENID);
       $("[name=gender][value=<!--{$user.gender}-->]").prop("checked",true);
       <!--{/if}-->
       iCMS.user.register();
@@ -27,9 +26,11 @@
         <div class="main-col">
           <h1><!--{if $user}-->欢迎加入<!--{$site.title}--><!--{else}-->新用户注册<!--{/if}--></h1>
           <div class="rl_center">
+            <!--{if $user}-->
             <div class="alert" style="width: 500px;margin-top: 10px;margin-bottom: 5px;">
               <strong>*</strong>请先补充必要的个人信息，只有补充完这些信息才能真正加入<!--{$site.title}-->哦
             </div>
+            <!--{/if}-->
             <div id="iCMS-register-box" class="rl_form">
               <div class="reg_mail"> <span>电子邮箱：</span>
                 <input id="iCMS-reg-username" type="text" maxlength="36" name="username" class="text" value="">
@@ -69,12 +70,19 @@
           <div class="right-col">
             <div class="rst_login">
               <span>已经有帐号？请直接登录</span>
-              <a href="<!--{iCMS:router url='/api/user/login'}-->"></a>
+              <a href="<!--{iCMS:router url='/api/user/login' query="$query"}-->"></a>
             </div>
             <div class="other_login">
               <span>您也可以用以下方式登录：</span>
-              <a class="reg_icon icon_qq" href="<!--{iCMS:router url='/api/user/login/qq'}-->">QQ 帐号</a>
-              <a class="reg_icon icon_sina" href="<!--{iCMS:router url='/api/user/login/wb'}-->">新浪微博</a>
+              <!--{if $iCMS.CONFIG.open.QQ.enable }-->
+              <a class="iCMS_open_icon icon_qq" href="<!--{iCMS:router url='/api/user/login/qq'}-->">QQ 帐号</a>
+              <!--{/if}-->
+              <!--{if $iCMS.CONFIG.open.WB.enable }-->
+              <a class="iCMS_open_icon icon_wb" href="<!--{iCMS:router url='/api/user/login/wb'}-->">新浪微博</a>
+              <!--{/if}-->
+              <!--{if $iCMS.CONFIG.open.WX.enable }-->
+              <a class="iCMS_open_icon icon_wx" href="<!--{iCMS:router url='/api/user/login/wb'}-->">微信账号</a>
+              <!--{/if}-->
             </div>
           </div>
           <div class="clearfix"></div>
