--- a/template/mobile/navbar.htm
+++ b/template/mobile/navbar.htm
@@ -18,6 +18,9 @@
 <nav id="header" class="navbar navbar-default" role="navigation" data-spy="affix" data-offset-top="90">
   <div class="container-fluid">
     <div class="navbar-header">
+      <a class="navbar-brand" href="<!--{$site.url}-->">
+        <img src="<!--{$site.urls.ui}-->/img/iCMS.logo-6.0.png"/>
+      </a>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#iCMS-menu-box">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
@@ -25,7 +28,6 @@
       <span class="icon-bar"></span>
       </button>
       <button type="button" class="search-toggle" data-toggle="collapse" data-target="#iCMS-search-box"><i class="fa fa-search"></i></a></button>
-      <a class="navbar-brand" href="<!--{$site.url}-->"><img src="<!--{$site.urls.ui}-->/img/iCMS.logo-6.0.png" width="180"/></a>
     </div>
 
     <div class="collapse navbar-collapse" id="iCMS-search-box">
