--- a/template/iCMS/public.ui.htm
+++ b/template/iCMS/public.ui.htm
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta content="iDreamSoft Inc." name="Copyright" />
 <link href="<!--{$iCMS.UI}-->/bootstrap/2.3.1/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+<link href="<!--{$iCMS.UI}-->/bootstrap/2.3.1/css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet"/>
 <link href="<!--{$iCMS.UI}-->/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
 <link href="<!--{$iCMS.UI}-->/artDialog/6.0.3/ui-dialog.css" type="text/css" rel="stylesheet"/>
 <link href="<!--{$iCMS.UI}-->/iCMS-6.0.0.css" type="text/css" rel="stylesheet"/>
