--- a/app/ui/common/iCMS-6.0.0.css
+++ b/app/ui/common/iCMS-6.0.0.css
@@ -1,4 +1,4 @@
-@import "reset.css";
+/*@import "reset.css";*/
 /* iCMS */
 html, body { word-wrap: break-word; word-break: break-all; }
 body, button, input, select, textarea, label { color: #222; font: 14px/1.75 'Helvetica Neue', Helvetica, Arial, Sans-serif; }
